# fsck.sfs

./: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md
scripts/: crash.sh
src/: CMakeLists.txt  checks.cc  checks.h  main.cc  sqlite.cc  sqlite.h
src/checks/: metadata_integrity.cc  metadata_integrity.h  metadata_schema_version.cc  metadata_schema_version.h  object_integrity.cc  object_integrity.h  orphaned_metadata.cc  orphaned_metadata.h  orphaned_objects.cc  orphaned_objects.h
